# aerae-accelerator

./: .env.example  .gitignore  README.md
backend/: pyproject.toml
backend/app/: main.py
backend/app/api/: routes.py
backend/app/core/: config.py  db.py  scoring.py
backend/app/schemas/: project.py
backend/app/services/: ai_engine.py  azure_openai_service.py  gemini_service.py  git_scanner.py  opa_client.py  pdf_parser.py  vector_store.py
backend/scripts/: seed_db.py
backend/tests/: test_ai_engine.py  test_analyze_risk.py  test_assess.py  test_get_assess.py  test_git_scanner.py  test_main.py  test_opa_client.py  test_pdf_parser.py  test_scan_secrets.py  test_scoring.py  test_vector_store.py
frontend/: package-lock.json  package.json
frontend/src/: App.tsx
frontend/src/components/: AssessmentForm.tsx  Dashboard.tsx  DashboardPage.tsx  OpaGateDetail.tsx  PipelineStepper.tsx  RiskList.tsx  ScoreBreakdown.tsx  Scorecard.tsx
policies/: eval_gates.sh  mock_input_fail.json  mock_input_pass.json  risk_gates.rego
